// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> matches snapshot 1`] = `
<div>
  <div
    class="progress css-woeb0y-container-container"
    id="my-progress-1"
  >
    <div
      class="percentage-container"
    >
      <div
        data-testid="percentage"
      >
        75‏%
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProgressBar /> matches snapshot with zero percent 1`] = `
<div>
  <div
    class="css-pvvi2x-container-container"
  >
    <div
      class="percentage-container"
    >
      <div
        data-testid="percentage"
      >
        0‏%
      </div>
    </div>
  </div>
</div>
`;
